--- a/Home.html
+++ b/Home.html
@@ -73,7 +73,7 @@
       style="background-image: url('img/common/file-icons.png');"
     >
       <div class="splash">
-        <h1 class="splash-head">Big Bold Text</h1>
+        <h1 class="splash-head">Martin Morris</h1>
         <p class="splash-subhead">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
         </p>
