--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,7 @@
       integrity="sha384-"
       crossorigin="anonymous"
     />
-    <link href="src/styles.css" rel="stylesheet" />
+    <link href="style/styles.css" rel="stylesheet" />
     <!--[if lte IE 8]>
       <link
         rel="stylesheet"
@@ -34,7 +34,7 @@
       <link rel="stylesheet" href="css/layouts/marketing-old-ie.css" />
     <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="marketing.css" />
+    <link rel="stylesheet" href="style/marketing.css" />
     <!--<![endif]-->
   </head>
   <body>
