--- a/Home.html
+++ b/Home.html
@@ -44,16 +44,13 @@
           class="fa fa-terminal pure-menu-heading"
           style=" color:white; padding-right:0px;"
         ></i
-        ><a
-          class="pure-menu-heading"
-          href="index1.html"
-          style="padding-left:2px;"
+        ><a class="pure-menu-heading" href="home.html" style="padding-left:2px;"
           >Martin Morris</a
         >
 
         <ul class="pure-menu-list">
           <li class="pure-menu-item pure-menu-selected">
-            <a href="index1.html" class="pure-menu-link">About</a>
+            <a href="home.html" class="pure-menu-link">About</a>
           </li>
           <li class="pure-menu-item">
             <a href="knowledge.html" class="pure-menu-link">Knowledge</a>
@@ -70,85 +67,16 @@
 
     <div
       class="splash-container"
-      style="background-image: url('img/common/file-icons.png');"
+      style="background-image: url('img/common/BackDropHome.png'); background-repeat: no-repeat; height:100%;background-size: cover;"
     >
-      <div class="splash">
-        <h1 class="splash-head">Martin Morris</h1>
-        <p class="splash-subhead">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        </p>
-      </div>
-    </div>
-
-    <div class="content-wrapper">
-      <div class="content">
-        <h2 class="content-head is-center">
-          Excepteur sint occaecat cupidatat.
-        </h2>
-
-        <div class="pure-g">
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead">
-              <i class="fa fa-rocket"></i>
-              Get Started Quickly
-            </h3>
-            <p>
-              Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-              sodales pellentesque elementum.
-            </p>
-          </div>
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead">
-              <i class="fa fa-mobile"></i>
-              Responsive Layouts
-            </h3>
-            <p>
-              Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-              sodales pellentesque elementum.
-            </p>
-          </div>
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead">
-              <i class="fa fa-th-large"></i>
-              Modular
-            </h3>
-            <p>
-              Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-              sodales pellentesque elementum.
-            </p>
-          </div>
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead">
-              <i class="fa fa-check-square-o"></i>
-              Plays Nice
-            </h3>
-            <p>
-              Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
-              sodales pellentesque elementum.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="ribbon l-box-lrg pure-g">
-        <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-          <img
-            width="300"
-            alt="File Icons"
-            class="pure-img-responsive"
-            src="img/common/file-icons.png"
-          />
-        </div>
-        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-          <h2 class="content-head content-head-ribbon">
-            Laboris nisi ut aliquip.
-          </h2>
-
+      <div id="homePageIntro">
+        <h1>Martin Morris</h1>
+        <div id="aboutMe">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor.
+            Final year student studying a Bachelors of IT majoring in Computer
+            Science with experience as an Information Technology Support
+            Officer. Skilled in User Interface Design, Databases, Creative
+            Problem Solving and Software Development.
           </p>
         </div>
       </div>
