--- a/Resume.html
+++ b/Resume.html
@@ -11,7 +11,7 @@
       integrity="sha384-"
       crossorigin="anonymous"
     />
-    <link href="src/styles.css" rel="stylesheet" />
+    <link href="style/styles.css" rel="stylesheet" />
     <!--[if lte IE 8]>
       <link
         rel="stylesheet"
@@ -29,12 +29,12 @@
       rel="stylesheet"
       href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
     />
-    <link href="src/styles.css" rel="stylesheet" />
+
     <!--[if lte IE 8]>
       <link rel="stylesheet" href="css/layouts/marketing-old-ie.css" />
     <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="marketing.css" />
+    <link rel="stylesheet" href="style/marketing.css" />
     <!--<![endif]-->
   </head>
   <body>
@@ -44,16 +44,13 @@
           class="fa fa-terminal pure-menu-heading"
           style=" color:white; padding-right:0px;"
         ></i
-        ><a
-          class="pure-menu-heading"
-          href="index1.html"
-          style="padding-left:2px;"
+        ><a class="pure-menu-heading" href="home.html" style="padding-left:2px;"
           >Martin Morris</a
         >
 
         <ul class="pure-menu-list">
           <li class="pure-menu-item">
-            <a href="index1.html" class="pure-menu-link">About</a>
+            <a href="home.html" class="pure-menu-link">About</a>
           </li>
           <li class="pure-menu-item">
             <a href="knowledge.html" class="pure-menu-link">Knowledge</a>
@@ -108,7 +105,7 @@
           alt="File Icons"
           class="pure-img-responsive is"
           style="border-radius: 100%;"
-          src="resume_picture.jpg"
+          src="img/common/resume_picture.jpg"
         />
       </div>
 
