--- a/Knowledge.html
+++ b/Knowledge.html
@@ -59,7 +59,7 @@
             <a href="knowledge.html" class="pure-menu-link">Knowledge</a>
           </li>
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link">Projects</a>
+            <a href="projects.html" class="pure-menu-link">Projects</a>
           </li>
           <li class="pure-menu-item">
             <a href="resume.html" class="pure-menu-link">Resume</a>
