--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Martin Morris Portfolio" />
-    <title>Martin Morris test 123 &ndash; Portfolio</title>
+    <title>Martin Morris &ndash; Portfolio</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
