--- a/Resume.html
+++ b/Resume.html
@@ -56,7 +56,7 @@
             <a href="knowledge.html" class="pure-menu-link">Knowledge</a>
           </li>
           <li class="pure-menu-item">
-            <a href="#" class="pure-menu-link">Projects</a>
+            <a href="projects.html" class="pure-menu-link">Projects</a>
           </li>
           <li class="pure-menu-item pure-menu-selected">
             <a href="resume.html" class="pure-menu-link ">Resume</a>
