--- a/Knowledge.html
+++ b/Knowledge.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Martin Morris Portfolio" />
     <title>Martin Morris &ndash; Portfolio</title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
-      integrity="sha384-"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-" crossorigin="anonymous" />
     <link href="style/styles.css" rel="stylesheet" />
     <!--[if lte IE 8]>
       <link
@@ -19,16 +15,10 @@
       />
     <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css" />
     <!--<![endif]-->
 
-    <link
-      rel="stylesheet"
-      href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
-    />
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
 
     <!--[if lte IE 8]>
       <link rel="stylesheet" href="css/layouts/marketing-old-ie.css" />
@@ -36,113 +26,224 @@
     <!--[if gt IE 8]><!-->
     <link rel="stylesheet" href="style/marketing.css" />
     <!--<![endif]-->
-  </head>
-  <body>
-    <div class="header">
-      <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-        <i
-        class="fa fa-terminal pure-menu-heading"
-        style=" color:white; padding-right:0px;"
-      ></i
-      ><a
-        class="pure-menu-heading"
-        href="home.html"
-        style="padding-left:2px;"
-        >Martin Morris</a
-      >
+    <script src="js/script"></script>
+</head>
 
-        <ul class="pure-menu-list">
-          <li class="pure-menu-item ">
-            <a href="home.html" class="pure-menu-link">About</a>
-          </li>
-          <li class="pure-menu-item pure-menu-selected">
-            <a href="knowledge.html" class="pure-menu-link">Knowledge</a>
-          </li>
-          <li class="pure-menu-item">
-            <a href="projects.html" class="pure-menu-link">Projects</a>
-          </li>
-          <li class="pure-menu-item">
-            <a href="resume.html" class="pure-menu-link">Resume</a>
-          </li>
-        </ul>
-      </div>
+<body>
+    <div class="header">
+        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+            <i class="fa fa-terminal pure-menu-heading" style=" color:white; padding-right:0px;"></i><a class="pure-menu-heading" href="home.html" style="padding-left:2px;">Martin Morris</a>
+
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item ">
+                    <a href="home.html" class="pure-menu-link">About</a>
+                </li>
+                <li class="pure-menu-item pure-menu-selected">
+                    <a href="knowledge.html" class="pure-menu-link">Knowledge</a>
+                </li>
+                <li class="pure-menu-item">
+                    <a href="projects.html" class="pure-menu-link">Projects</a>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <div class="page-container">
-      <div class="content" style="padding-bottom: 1%;">
-        <h2 class="content-head" style="margin-top: 1em;">
-          Knowledge
-        </h2>
+        <div class="content" style="padding-bottom: 1%;">
+            <h2 class="content-head" style="margin-top: 1em;">
+                Knowledge
+            </h2>
 
-        <div class="pure-g">
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-            <h3 class="content-subhead">
-              <i class="fa fa-book"></i>
-              Education
-            </h3>
-            <p>
-              I have completed a Bachelor of Games Design and currently in my final
-              year of a Bachelors of IT majoring in computer science.
-            </p>
-          </div>
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-            <h3 class="content-subhead">
-              <i class="fa fa-code"></i>
-              Programming Languages
-            </h3>
-            <p>
-              I am comfortable/proficient in C#, C, Java, SQL, Python, HTML,
-              CSS, Javascript.
-            </p>
-          </div>
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-            <h3 class="content-subhead">
-              <i class="fa fa-desktop"></i>
-              Full Stack Web Development
-            </h3>
-            <p>
-              I have experience using .NET/C#, MySQL, Javascript, CSS, HTML,
-              MERN Stack.
-            </p>
-          </div>
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-            <h3 class="content-subhead">
-              <i class="fa fa-users"></i>
-              UI/UX Design
-            </h3>
-            <p>
-              I have extensively researched effecitve UI/UX design and have implemented such theory to solve problems found in professional work environments.
-            </p>
-          </div>
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-            <h3 class="content-subhead">
-              <i class="fa fa-th-large"></i>
-              App Development
-            </h3>
-            <p>
-              I have extensive industry experience in creating/deploying
-              applications using the Windows Forms and Windows Presentation
-              Foundation (WPF) UI frameworks.
-            </p>
-          </div>
+            <div class="pure-g">
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-book"></i>
+                        Education
+                    </h3>
+                    <p>
+                        I have completed a Bachelor of Games Design and currently in my final
+                        year of a Bachelors of IT majoring in computer science.
+                    </p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-code"></i>
+                        Programming Languages
+                    </h3>
+                    <p>
+                        I am comfortable/proficient in C#, C, Java, SQL, Python, HTML,
+                        CSS, Javascript.
+                    </p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-desktop"></i>
+                        Full Stack Web Development
+                    </h3>
+                    <p>
+                        I have experience using .NET/C#, MySQL, Javascript, CSS, HTML,
+                        MERN Stack.
+                    </p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-users"></i>
+                        UI/UX Design
+                    </h3>
+                    <p>
+                        I have extensively researched effecitve UI/UX design and have implemented such theory to solve problems found in professional work environments.
+                    </p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-th-large"></i>
+                        App Development
+                    </h3>
+                    <p>
+                        I have extensive industry experience in creating/deploying
+                        applications using the Windows Forms and Windows Presentation
+                        Foundation (WPF) UI frameworks.
+                    </p>
+                </div>
 
-          <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-            <h3 class="content-subhead">
-              <i class="fa fa-gamepad"></i>
-              Games Design
-            </h3>
-            <p>
-              I have extensive knowledge of Game Design principles and Games
-              Programing utilising the Unreal and Unity game engines.
-            </p>
-          </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+                    <h3 class="content-subhead">
+                        <i class="fa fa-gamepad"></i>
+                        Games Design
+                    </h3>
+                    <p>
+                        I have extensive knowledge of Game Design principles and Games
+                        Programing utilising the Unreal and Unity game engines.
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
 
-      <div class="content">
-        <h2 class="content-head" style="margin-top:.5em;">
-          Skills
-        </h2>
+
+            <h2 class="content-head" style="margin-top:.5em;">
+                Resume <a class="is-center" href="Resume.pdf" target="_blank">[Download]</a>
+            </h2>
+            <button class="pure-button pure-button-active" id="resume-show-button" onclick="openResume(event)">Show Resume </button>
+            <div id="resume-knowledge" class="rInActive">
+                <div class="page-container-resume  l-box-lrg pure-g" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                    <div id="resume-sidePanel" class="l-box-lrg pure-u-md-1-2 pure-u-lg-1-3 ">
+                        <div id="contact-info-resume">
+                            <div id="resume-name">
+                                <h1>Martin Morris</h1>
+                            </div>
+                            <div id="resume-contact">
+                                <p>
+                                    <i style="margin-right: 1.4em;" class="fa fa-phone-square" aria-hidden="true">
+                                    </i>
+                                    0421418461
+                                </p>
+
+                                <p>
+                                    <i style="margin-right: 1em;" class="fa fa-envelope" aria-hidden="true"></i>
+                                    Martin.Morris95@outlook.com
+                                </p>
+                            </div>
+                        </div>
+
+                        <img width="300" alt="File Icons" class="pure-img-responsive is" style="border-radius: 100%;" src="img/common/resume_picture.jpg" />
+                    </div>
+
+                    <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-3" id="info-panel-resume">
+                        <p class="is-center">
+                            Fulltime student studying a Bachelors of IT majoring in Computer
+                            Science with experience as an Information Technology Support Officer.
+                            Skilled in User Interface Design, Databases, Creative Problem Solving
+                            and Software Development.
+                        </p>
+
+                        <hr />
+                        <h2>Skills:</h2>
+                        <table class="resume-skills">
+                            <td>
+                                <ul>
+                                    <li>Problem solving</li>
+                                    <li>Devoted and eager</li>
+                                    <li>C#, Java, Python, CSS, HTML, JavaScript, SQL</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Works well in high stress environments</li>
+                                    <li>Passionate about my work</li>
+                                    <li>Team player</li>
+                                </ul>
+                            </td>
+                        </table>
+                        <h2>Software:</h2>
+                        <table class="resume-skills">
+                            <td>
+                                <ul>
+                                    <li>Visual Studio</li>
+                                    <li>Photoshop</li>
+                                    <li>Active Directory</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Microsoft SQL Server</li>
+                                    <li>VM technologies</li>
+                                </ul>
+                            </td>
+                        </table>
+                        <h2>Work History:</h2>
+
+                        <h3>IT Support Officer – ThomsonAdsett Architects (2018 - Current)</h3>
+                        <ul>
+                            <li>
+                                Provide technical support remotely and locally to our offices around
+                                Australia and overseas.
+                            </li>
+                            <li>
+                                Developing software to solve problem areas found in the work place.
+                            </li>
+                            <li>
+                                Creating web applications and pages.
+                            </li>
+                            <li>
+                                Maintaining and securing company sensitive data.
+                            </li>
+                            <li>
+                                Management of Active Directory
+                            </li>
+                            <li>
+                                Office 365 admin responsibilities
+                            </li>
+                        </ul>
+
+                        <h3>Cook – Various establishments (2010 – 2018)</h3>
+                        <ul>
+                            <li>
+                                Cafe Metz (2017-2018)
+                            </li>
+                            <li>
+                                Treasure Island (2016-2017)
+                            </li>
+                            <li>
+                                Tamborine Mountain Vineyard and Winery (2010-2016)
+                            </li>
+                        </ul>
+
+                        <h2>Education:</h2>
+                        <h3 style="margin-bottom: 0;">
+                            Bachelor of Information Technology (Computer Science)
+                        </h3>
+                        QUT(2018-2020)
+                        <h3 style="margin-bottom: 0;">
+                            Bachelor of Games Design (Games Programming)
+                        </h3>
+                        Griffith University (2013 - 2015)
+                    </div>
+                </div>
+
+
+
+
+            <!--
         <div class="pure-g">
 
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
@@ -272,8 +373,9 @@
             </div>
           </div>   
         </div>
-
-      </div>
+-->
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
