--- a/Knowledge.html
+++ b/Knowledge.html
@@ -67,7 +67,7 @@
     <div class="page-container">
       <div class="content" style="padding-bottom: 1%;">
         <h2 class="content-head" style="margin-top: 1em;">
-          Knowledge It worked
+          Knowledge
         </h2>
 
         <div class="pure-g">
