--- a/projects.html
+++ b/projects.html
@@ -32,14 +32,14 @@
 <body>
     <div class="header">
         <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-            <i class="fa fa-terminal pure-menu-heading" style=" color:white; padding-right:0px;"></i><a class="pure-menu-heading" href="home.html" style="padding-left:2px;">Martin Morris</a>
+            <i class="fa fa-terminal pure-menu-heading" style=" color:white; padding-right:0px;"></i><a class="pure-menu-heading" href="Home.html" style="padding-left:2px;">Martin Morris</a>
 
             <ul class="pure-menu-list">
                 <li class="pure-menu-item ">
-                    <a href="home.html" class="pure-menu-link">About</a>
+                    <a href="Home.html" class="pure-menu-link">About</a>
                 </li>
                 <li class="pure-menu-item ">
-                    <a href="knowledge.html" class="pure-menu-link">Knowledge</a>
+                    <a href="Knowledge.html" class="pure-menu-link">Knowledge</a>
                 </li>
                 <li class="pure-menu-item pure-menu-selected">
                     <a href="projects.html" class="pure-menu-link">Projects</a>
