Update projects tab

--- a/Home.html
+++ b/Home.html
@@ -70,10 +70,10 @@
         <h1>Martin Morris</h1>
         <div id="aboutMe">
           <p>
-            TEST Final year student studying a Bachelors of IT majoring in
-            Computer Science with experience as an Information Technology
-            Support Officer. Skilled in User Interface Design, Databases,
-            Creative Problem Solving and Software Development.
+            Final year student studying a Bachelors of IT majoring in Computer
+            Science with experience as an Information Technology Support
+            Officer. Skilled in User Interface Design, Databases, Creative
+            Problem Solving and Software Development.
           </p>
         </div>
       </div>
