--- a/Knowledge.html
+++ b/Knowledge.html
@@ -136,157 +136,163 @@
           </div>
         </div>
       </div>
+      <div class="content" style="padding-bottom: 1%;"></div>
+        <h2 class="content-head" style="margin-top:.5em;display: inline;">
+          Resume
+        </h2>
 
-      <h2 class="content-head" style="margin-top:.5em;">
-        Resume
-        <a class="is-center" href="Resume.pdf" target="_blank">[Download]</a>
-      </h2>
-      <button
-        class="pure-button pure-button-active"
-        id="resume-show-button"
-        onclick="openResume(event)"
-      >
-        Show Resume
-      </button>
-      <div id="resume-knowledge" class="rInActive">
-        <div
-          class="page-container-resume  l-box-lrg pure-g"
-          style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"
+        <a href="Resume.pdf" target="_blank"
+          ><button class="pure-button pure-button-active">
+            Download Resume
+          </button>
+        </a>
+        <button
+          class="pure-button pure-button-active"
+          id="resume-show-button"
+          onclick="openResume(event)"
         >
+          Show Resume
+        </button>
+        <div id="resume-knowledge" class="rInActive">
           <div
-            id="resume-sidePanel"
-            class="l-box-lrg pure-u-md-1-2 pure-u-lg-1-3 "
+            class="page-container-resume  l-box-lrg pure-g"
+            style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"
           >
-            <div id="contact-info-resume">
-              <div id="resume-name">
-                <h1>Martin Morris</h1>
-              </div>
-              <div id="resume-contact">
-                <p>
-                  <i
-                    style="margin-right: 1.4em;"
-                    class="fa fa-phone-square"
-                    aria-hidden="true"
-                  >
-                  </i>
-                  0421418461
-                </p>
+            <div
+              id="resume-sidePanel"
+              class="l-box-lrg pure-u-md-1-2 pure-u-lg-1-3 "
+            >
+              <div id="contact-info-resume">
+                <div id="resume-name">
+                  <h1>Martin Morris</h1>
+                </div>
+                <div id="resume-contact">
+                  <p>
+                    <i
+                      style="margin-right: 1.4em;"
+                      class="fa fa-phone-square"
+                      aria-hidden="true"
+                    >
+                    </i>
+                    0421418461
+                  </p>
 
-                <p>
-                  <i
-                    style="margin-right: 1em;"
-                    class="fa fa-envelope"
-                    aria-hidden="true"
-                  ></i>
-                  Martin.Morris95@outlook.com
-                </p>
+                  <p>
+                    <i
+                      style="margin-right: 1em;"
+                      class="fa fa-envelope"
+                      aria-hidden="true"
+                    ></i>
+                    Martin.Morris95@outlook.com
+                  </p>
+                </div>
               </div>
+
+              <img
+                width="300"
+                alt="File Icons"
+                class="pure-img-responsive is"
+                style="border-radius: 100%;"
+                src="img/common/resume_picture.jpg"
+              />
             </div>
 
-            <img
-              width="300"
-              alt="File Icons"
-              class="pure-img-responsive is"
-              style="border-radius: 100%;"
-              src="img/common/resume_picture.jpg"
-            />
-          </div>
+            <div
+              class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-3"
+              id="info-panel-resume"
+            >
+              <p class="is-center">
+                Fulltime student studying a Bachelors of IT majoring in Computer
+                Science with experience as an Information Technology Support
+                Officer. Skilled in User Interface Design, Databases, Creative
+                Problem Solving and Software Development.
+              </p>
 
-          <div
-            class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-3"
-            id="info-panel-resume"
-          >
-            <p class="is-center">
-              Fulltime student studying a Bachelors of IT majoring in Computer
-              Science with experience as an Information Technology Support
-              Officer. Skilled in User Interface Design, Databases, Creative
-              Problem Solving and Software Development.
-            </p>
+              <hr />
+              <h2>Skills:</h2>
+              <table class="resume-skills">
+                <td>
+                  <ul>
+                    <li>Problem solving</li>
+                    <li>Devoted and eager</li>
+                    <li>C#, Java, Python, CSS, HTML, JavaScript, SQL</li>
+                  </ul>
+                </td>
+                <td>
+                  <ul>
+                    <li>Works well in high stress environments</li>
+                    <li>Passionate about my work</li>
+                    <li>Team player</li>
+                  </ul>
+                </td>
+              </table>
+              <h2>Software:</h2>
+              <table class="resume-skills">
+                <td>
+                  <ul>
+                    <li>Visual Studio</li>
+                    <li>Photoshop</li>
+                    <li>Active Directory</li>
+                  </ul>
+                </td>
+                <td>
+                  <ul>
+                    <li>Microsoft SQL Server</li>
+                    <li>VM technologies</li>
+                  </ul>
+                </td>
+              </table>
+              <h2>Work History:</h2>
 
-            <hr />
-            <h2>Skills:</h2>
-            <table class="resume-skills">
-              <td>
-                <ul>
-                  <li>Problem solving</li>
-                  <li>Devoted and eager</li>
-                  <li>C#, Java, Python, CSS, HTML, JavaScript, SQL</li>
-                </ul>
-              </td>
-              <td>
-                <ul>
-                  <li>Works well in high stress environments</li>
-                  <li>Passionate about my work</li>
-                  <li>Team player</li>
-                </ul>
-              </td>
-            </table>
-            <h2>Software:</h2>
-            <table class="resume-skills">
-              <td>
-                <ul>
-                  <li>Visual Studio</li>
-                  <li>Photoshop</li>
-                  <li>Active Directory</li>
-                </ul>
-              </td>
-              <td>
-                <ul>
-                  <li>Microsoft SQL Server</li>
-                  <li>VM technologies</li>
-                </ul>
-              </td>
-            </table>
-            <h2>Work History:</h2>
+              <h3>
+                IT Support Officer – ThomsonAdsett Architects (2018 - Current)
+              </h3>
+              <ul>
+                <li>
+                  Provide technical support remotely and locally to our offices
+                  around Australia and overseas.
+                </li>
+                <li>
+                  Developing software to solve problem areas found in the work
+                  place.
+                </li>
+                <li>
+                  Creating web applications and pages.
+                </li>
+                <li>
+                  Maintaining and securing company sensitive data.
+                </li>
+                <li>
+                  Management of Active Directory
+                </li>
+                <li>
+                  Office 365 admin responsibilities
+                </li>
+              </ul>
 
-            <h3>
-              IT Support Officer – ThomsonAdsett Architects (2018 - Current)
-            </h3>
-            <ul>
-              <li>
-                Provide technical support remotely and locally to our offices
-                around Australia and overseas.
-              </li>
-              <li>
-                Developing software to solve problem areas found in the work
-                place.
-              </li>
-              <li>
-                Creating web applications and pages.
-              </li>
-              <li>
-                Maintaining and securing company sensitive data.
-              </li>
-              <li>
-                Management of Active Directory
-              </li>
-              <li>
-                Office 365 admin responsibilities
-              </li>
-            </ul>
+              <h3>Cook – Various establishments (2010 – 2018)</h3>
+              <ul>
+                <li>
+                  Cafe Metz (2017-2018)
+                </li>
+                <li>
+                  Treasure Island (2016-2017)
+                </li>
+                <li>
+                  Tamborine Mountain Vineyard and Winery (2010-2016)
+                </li>
+              </ul>
 
-            <h3>Cook – Various establishments (2010 – 2018)</h3>
-            <ul>
-              <li>
-                Cafe Metz (2017-2018)
-              </li>
-              <li>
-                Treasure Island (2016-2017)
-              </li>
-              <li>
-                Tamborine Mountain Vineyard and Winery (2010-2016)
-              </li>
-            </ul>
-
-            <h2>Education:</h2>
-            <h3 style="margin-bottom: 0;">
-              Bachelor of Information Technology (Computer Science)
-            </h3>
-            QUT(2018-2020)
-            <h3 style="margin-bottom: 0;">
-              Bachelor of Games Design (Games Programming)
-            </h3>
-            Griffith University (2013 - 2015)
+              <h2>Education:</h2>
+              <h3 style="margin-bottom: 0;">
+                Bachelor of Information Technology (Computer Science)
+              </h3>
+              QUT(2018-2020)
+              <h3 style="margin-bottom: 0;">
+                Bachelor of Games Design (Games Programming)
+              </h3>
+              Griffith University (2013 - 2015)
+            </div>
           </div>
         </div>
 
