Added phone blockl

--- a/Home.html
+++ b/Home.html
@@ -38,6 +38,11 @@
     <!--<![endif]-->
   </head>
   <body>
+    <div class="PhoneBlocker">
+      <h1 class="is-center">Mobile Version Coming Soon</h1>
+      <h2 class="is-center">Please use a browser to view this site</h2>
+      <h3 class="is-center">Sorry for the inconvience</h3>
+    </div>
     <div class="header">
       <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
         <i
