Updated home page

--- a/Home.html
+++ b/Home.html
@@ -80,6 +80,16 @@
             Officer. Skilled in User Interface Design, Databases, Creative
             Problem Solving and Software Development.
           </p>
+          <div id="icon-container">
+            <img class="softwareIcon" src="img/SoftwareIcons/c-sharp.png" />
+            <img class="softwareIcon" src="img/SoftwareIcons/vs.png" />
+            <img class="softwareIcon" src="img/SoftwareIcons/game.png" />
+            <img class="softwareIcon" src="img/SoftwareIcons/sql.png" />
+
+            <img class="softwareIcon" src="img/SoftwareIcons/office.png" />
+            <img class="softwareIcon" src="img/SoftwareIcons/microsoft.png" />
+            <img class="softwareIcon" src="img/SoftwareIcons/web.png" />
+          </div>
         </div>
       </div>
     </div>
