--- a/Home.html
+++ b/Home.html
@@ -35,6 +35,7 @@
     <![endif]-->
     <!--[if gt IE 8]><!-->
     <link rel="stylesheet" href="style/marketing.css" />
+    <script src="js/p5.js"></script>
     <!--<![endif]-->
   </head>
   <body>
@@ -67,10 +68,8 @@
       </div>
     </div>
 
-    <div
-      class="splash-container"
-      style="background-image: url('img/common/BackDropHome.png'); background-repeat: no-repeat; height:100%;background-size: cover;"
-    >
+    <!-- style="background-image: url('img/common/BackDropHome.png'); background-repeat: no-repeat; height:100%;background-size: cover;" -->
+    <div class="">
       <div id="homePageIntro">
         <h1>Martin Morris</h1>
         <div id="aboutMe">
@@ -93,5 +92,6 @@
         </div>
       </div>
     </div>
+    <script src="js/sketch.js"></script>
   </body>
 </html>
