--- a/Home.html
+++ b/Home.html
@@ -92,6 +92,14 @@
         </div>
       </div>
     </div>
+    <button
+      id="destroyButton"
+      class="button-error pure-button pulse-red"
+      onclick="destroy()"
+    >
+      Clear Creation
+    </button>
     <script src="js/sketch.js"></script>
+    <footer class="footer l-box is-center"></footer>
   </body>
 </html>
