--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
     <!-- style="background-image: url('img/common/BackDropHome.png'); background-repeat: no-repeat; height:100%;background-size: cover;" -->
     <div class="">
       <div id="homePageIntro">
-        <h1>Martin Morris</h1>
+        <h1>Martin Morris123</h1>
         <div id="aboutMe">
           <p>
             Final year student studying a Bachelors of IT majoring in Computer
