--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     <!--<![endif]-->
 
     <link href="node_modules/lightbox2/dist/css/lightbox.min.css" rel="stylesheet" />
-    <script src="js/script"></script>
+    <script src="js/script.js"></script>
    
 </head>
 
@@ -157,12 +157,21 @@
             <div id="Applications" class="tabcontent">
                 
               <div id="applicationPanel">
+
                 <div class="tabSide">
                     <button class="tablinksSide" onclick="openTabSide(event, 'hdt')">Help Desk Tool</button>
                     <button class="tablinksSide" onclick="openTabSide(event, 'rla')">Revit Addin</button>
                     <button class="tablinksSide" onclick="openTabSide(event, 'trt')">Travel Request</button>
-                  </div>
-                  
+                  </div> 
+
+                  <!-- <div class="tabOptionsMob">
+                        <button class="tablinkMob" onclick="openTabSideMob(event, 'hdt')">Help Desk Tool</button>
+                        <button class="tablinkMob" onclick="openTabSideMob(event, 'rla')">Revit Addin</button>
+                        <button class="tablinkMob" onclick="openTabSideMob(event, 'trt')">Travel Request</button>
+                 </div> -->
+                 <div class="tabOptionsMob">
+                     <h1 style="text-align: center; width:100%; padding:20%;">Coming Soon</h1>
+                 </div>
                   <div id="hdt" class="tabcontentSide"style="display: none;">
                     <div class="appProjHeader">
                         <h2>Help Desk Notes Tool</h2>
