--- a/Knowledge.html
+++ b/Knowledge.html
@@ -271,7 +271,7 @@
                 </li>
               </ul>
 
-              <h3>Cook – Various establishments (2010 – 2018)</h3>
+              <h3>Hospitality – Various establishments (2010 – 2018)</h3>
               <ul>
                 <li>
                   Cafe Metz (2017-2018)
