--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,27 @@
       </div>
     </div>
 
+    <div class="topnav">
+      <i
+        class="fa fa-terminal pure-menu-heading"
+        style=" color:white; padding-right:0px;"
+      ></i
+      ><a class="pure-menu-heading" href="Home.html" style="padding-left:2px;"
+        >Martin Morris</a
+      >
+      <!-- Navigation links (hidden by default) -->
+
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    <div id="myLinks">
+      <a href="Home.html">Home</a>
+      <a href="Knowledge.html">Knowledge</a>
+      <a href="projects.html">Projects</a>
+    </div>
+
     <div class="page-container">
       <div class="content" style="padding-bottom: 1%;">
         <h2 class="content-head" style="margin-top: 1em;">
