--- a/Knowledge.html
+++ b/Knowledge.html
@@ -36,7 +36,7 @@
     <!--[if gt IE 8]><!-->
     <link rel="stylesheet" href="style/marketing.css" />
     <!--<![endif]-->
-    <script src="js/script"></script>
+    <script src="js/script.js"></script>
   </head>
 
   <body>
@@ -62,6 +62,27 @@
           </li>
         </ul>
       </div>
+    </div>
+
+    <div class="topnav">
+      <i
+        class="fa fa-terminal pure-menu-heading"
+        style=" color:white; padding-right:0px;"
+      ></i
+      ><a class="pure-menu-heading" href="Home.html" style="padding-left:2px;"
+        >Martin Morris</a
+      >
+      <!-- Navigation links (hidden by default) -->
+
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    <div id="myLinks">
+      <a href="Home.html">Home</a>
+      <a href="Knowledge.html">Knowledge</a>
+      <a href="projects.html">Projects</a>
     </div>
 
     <div class="page-container">
