forgot to make changes to other ones

--- a/Knowledge.html
+++ b/Knowledge.html
@@ -65,13 +65,15 @@
     </div>
 
     <div class="topnav">
-      <i
-        class="fa fa-terminal pure-menu-heading"
-        style=" color:white; padding-right:0px;"
-      ></i
-      ><a class="pure-menu-heading" href="Home.html" style="padding-left:2px;"
-        >Martin Morris</a
-      >
+      <div>
+        <i
+          class="fa fa-terminal pure-menu-heading"
+          style=" color:white; padding-right:0px;"
+        ></i
+        ><a class="pure-menu-heading" href="Home.html" style="padding-left:2px;"
+          >Martin Morris</a
+        >
+      </div>
       <!-- Navigation links (hidden by default) -->
 
       <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
