fixed header styling

--- a/Home.html
+++ b/Home.html
@@ -131,6 +131,7 @@
     >
       Clear Creation
     </button>
+    <footer class="footWeb footer l-box is-center"></footer>
     <script src="js/sketch.js"></script>
   </body>
 </html>
