--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
 
       <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
+        <i class="fa fa-bars fa-2x"></i>
       </a>
     </div>
     <div id="myLinks">
