--- a/projects.html
+++ b/projects.html
@@ -116,6 +116,40 @@
         <div id="Websites" class="tabcontent" style="display: block">
           <div class="project-container">
             <div class="project-description">
+              <h2 style="margin-top: 0;">Intranet</h2>
+              <strong>[.Net] [C#] [Razor] [HTML/CSS/JS] [UI/UX] </strong>
+
+              <p>
+                This is the begining stages on a project to redevelop my works
+                intranet. It is a proof of concept showcasing new features to be
+                voted on and approved before full development takes place
+              </p>
+
+              <p>
+                I wanted to add personalisation to the new intranet and
+                therefore gave employees a customisable widget panel which they
+                can fill with there most used tools/gadgets. I also allow
+                employees to pick a colour scheme that best suits them. The goal
+                is to make the intranet more useful and pleasent to use as our
+                current site acts primarily as a document library/blog.
+              </p>
+            </div>
+            <div class="websiteImages">
+              <div class="container">
+                <iframe
+                  width="100%"
+                  height="100%"
+                  src="https://www.youtube.com/embed/XP0FVYUUyNk?rel=0&vq=hd720p60"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+
+          <div class="project-container">
+            <div class="project-description">
               <h2 style="margin-top: 0;">Holli Dolli</h2>
               <strong>[HTML/CSS/JS] [UI/UX] [Shopify] </strong>
 
