added smooth scroll and bigger buttons for phone

--- a/Knowledge.html
+++ b/Knowledge.html
@@ -163,19 +163,21 @@
         <h2 class="content-head" style="margin-top:.5em;">
           Resume
         </h2>
-        <button
-          class="pure-button pure-button-active knowledgeButt"
-          id="resume-show-button"
-          onclick="openResume(event)"
-        >
-          Show
-        </button>
-
-        <a href="Resume.pdf" target="_blank" class="knowledgeButt"
-          ><button class="pure-button pure-button-active knowledgeButt">
-            Download
+        <div id="resume-buttons">
+          <button
+            class="pure-button pure-button-active knowledgeButt"
+            id="resume-show-button"
+            onclick="openResume(event)"
+          >
+            Show
           </button>
-        </a>
+
+          <a href="Resume.pdf" target="_blank" class="knowledgeButt"
+            ><button class="pure-button pure-button-active knowledgeButt">
+              Download
+            </button>
+          </a>
+        </div>
 
         <div id="resume-knowledge" class="rInActive">
           <div
