Added two new projects

--- a/projects.html
+++ b/projects.html
@@ -321,6 +321,12 @@
               <button class="tablinksSide" onclick="openTabSide(event, 'hdt')">
                 Help Desk Tool
               </button>
+              <button class="tablinksSide" onclick="openTabSide(event, 'hdt2')">
+                Help Desk Tool V2
+              </button>
+              <button class="tablinksSide" onclick="openTabSide(event, 'sit')">
+                System Info Tool
+              </button>
               <button class="tablinksSide" onclick="openTabSide(event, 'rla')">
                 Revit Addin
               </button>
@@ -429,6 +435,238 @@
                 </p>
               </div>
             </div>
+
+            <div id="hdt2" class="tabcontentSide" style="display: none;">
+              <div class="appProjHeader">
+                <h2>Help Desk Notes Tool V2</h2>
+                <p>
+                  <b>[C#] [.Net] [Visual Studio] [WPF] [XAML] [SQL] [LINQ]</b>
+                </p>
+              </div>
+
+              <div class="appSlideshowContainer" style="height:25% !important;">
+                <iframe
+                  width="40%"
+                  src="https://www.youtube.com/embed/7IAP9pP58S8"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <div class="appFeatures">
+                  <h3>Changes</h3>
+                  <ul>
+                    <li>
+                      Can now edit every file
+                    </li>
+                    <li>
+                      All fetaures contained in one window
+                    </li>
+                    <li>
+                      Search by category, tags and name
+                    </li>
+                    <li>
+                      New colour scheme
+                    </li>
+                    <li>
+                      New UI
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="appSlideshowContainer">
+                <div class="appStory">
+                  <p>
+                    After two years in my role I decided to redo the Help Desk
+                    Notes from scratch. This time utilizing my New found
+                    knowledge and experience. I believe the difference between
+                    the versions perfectly showcases how my skills have
+                    developed and improved since first starting my role.
+                  </p>
+                  <p>
+                    The most notable upgrade to the tool is the ability to now
+                    edit the notes. This was a feature I wanted to add for quite
+                    soemtime however just couldnt find the time to implement it.
+                    This now allows the notes to stay up to date and using a
+                    much less tedious process which used to conist of removing
+                    the notes from the database manually and then reuploading
+                    the revised version.
+                  </p>
+                </div>
+                <div class="slideshow">
+                  <a
+                    class="slideshowLinks HD2Img"
+                    href="img/slideshow/hd2-1.PNG"
+                    data-lightbox="HelpDeskV2"
+                    data-title="New and improved helpdesk notes tool"
+                    ><img
+                      class="projectSlideshow"
+                      src="img/slideshow/hd2-1.PNG"
+                      alt=""
+                  /></a>
+                  <a
+                    class="slideshowLinks HD2Img"
+                    href="img/slideshow/hd2-2.PNG"
+                    data-lightbox="HelpDeskV2"
+                    data-title="New and improved helpdesk notes tool"
+                    ><img
+                      class="projectSlideshow"
+                      src="img/slideshow/hd2-2.PNG"
+                      alt=""
+                  /></a>
+                  <a
+                    class="slideshowLinks HD2Img"
+                    href="img/slideshow/hd2-3.PNG"
+                    data-lightbox="HelpDeskV2"
+                    data-title="New and improved helpdesk notes tool"
+                    ><img
+                      class="projectSlideshow"
+                      src="img/slideshow/hd2-3.PNG"
+                      alt=""
+                  /></a>
+                </div>
+              </div>
+            </div>
+
+            <div id="sit" class="tabcontentSide" style="display: none;">
+              <div class="appProjHeader">
+                <h2>System Info Tool</h2>
+                <p>
+                  <b
+                    >[C#] [.Net] [Visual Studio] [WPF] [XAML] [SQL] [UI] [UX]</b
+                  >
+                </p>
+              </div>
+
+              <div class="appSlideshowContainer">
+                <div class="slideshowLong">
+                  <a
+                    class="slideshowLinks sysImg"
+                    href="img/slideshow/Sysinfo1.PNG"
+                    data-lightbox="sysInfo App"
+                    data-title="New System info tool"
+                    ><img
+                      class="projectSlideshow"
+                      src="img/slideshow/Sysinfo1.PNG"
+                      alt=""
+                  /></a>
+                  <a
+                    class="slideshowLinks sysImg"
+                    href="img/slideshow/Sysinfo2.PNG"
+                    data-lightbox="sysInfo App"
+                    data-title="Computer Information is now opened using a toggle button"
+                    ><img
+                      class="projectSlideshow"
+                      src="img/slideshow/Sysinfo2.PNG"
+                      alt=""
+                  /></a>
+                  <a
+                    class="slideshowLinks sysImg"
+                    href="img/slideshow/Sysinfo3.PNG"
+                    data-lightbox="sysInfo App"
+                    data-title="Old vs new alert banners"
+                    ><img
+                      class="projectSlideshow"
+                      src="img/slideshow/Sysinfo3.PNG"
+                      alt=""
+                  /></a>
+                  <a
+                    class="slideshowLinks sysImg"
+                    href="img/slideshow/Sysinfo4.PNG"
+                    data-lightbox="sysInfo App"
+                    data-title="Old System info tool"
+                    ><img
+                      class="projectSlideshow"
+                      src="img/slideshow/Sysinfo4.PNG"
+                      alt=""
+                  /></a>
+                </div>
+                <div class="appFeatures">
+                  <h3>Features</h3>
+                  <ul>
+                    <li>
+                      Tracks computers performance
+                    </li>
+                    <li>
+                      Gathers information about each computer in the company and
+                      stores it in a Database
+                    </li>
+                    <li>
+                      Detects when a users password is about to expire and sends
+                      them a personalised email 7 and 3 days prior. (Also takes
+                      into consideration if this day falls on a weekend and will
+                      warn you earlier otherwise)
+                    </li>
+                    <li>
+                      Warns users of timed events (temp drive erase, password
+                      expiry, computer uptime, time sheet status)
+                    </li>
+                    <li>
+                      Allows for quick creation of a helpdesk ticket.
+                    </li>
+                    <li>
+                      Update users outlook signature, launch timesheet portal,
+                      reveal utility account password and view system
+                      information
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="appStory">
+                <i style="color:red;">
+                  Disclaimer: I only worked on the front end of this project.
+                  All data gathering logic, utility password generation and
+                  signature update was done prior to my contribution to the
+                  project
+                </i>
+                <p>
+                  The system info tool was initialy created to gather data for
+                  each computer user, RAM, GPU, CPU, etc. This allowed IT to
+                  compile a computer list that we could access and instantly
+                  know who was using which machine and its specs. The tool also
+                  displayed realtime CPU, RAM, and storage performance which
+                  allowed the support team to quickly see if a computer had any
+                  performance issues.
+                </p>
+                <p>
+                  After sometime working at the company that had created and
+                  deployed this tool I noticed that no one paid attention to the
+                  tool and I believed we could rework the front end to be more
+                  pleasent and engaging for employees whilst also maintaing the
+                  functionality the tool was intended for.
+                </p>
+                <p>
+                  I started off with removing all the data that the employees
+                  wouldnt want to see/care about and moved it to its own
+                  seperate window (see image 2). This freed up alot of space and
+                  made the tool less cluttered. I then emphasized important
+                  information such as the IP address, computer name and current
+                  user name as these are three things we mostly ask for when
+                  offering remote help via the phone. I then reworked the alert
+                  system banner (see Image 3) to be more obvious and eye
+                  catching. This is an attempt to stop users missing there
+                  password resets and temp drive erase dates. Lastly I added a
+                  whole new section labeled IT Help Desk. This section allows
+                  for an automated email template to be generated to send
+                  helpdesk tickets and also includes the help desks contact
+                  number. This was done in an attempt to lower the amount of
+                  direct calls the head of IT recieves for trivial helpdesk
+                  level jobs.
+                </p>
+
+                <p>
+                  As our employees tend to work remotely/out in the field
+                  expired passwords can become quite a hassle if they have not
+                  reset them prior to the lock out date. As this happens quite
+                  alot I incorporated a password expiry checker that will alert
+                  the user via an automated email 7 and 3 days prior to it
+                  expiring with instructions on how to do so. This along with
+                  the new and improved alert banner system I hope to lower the
+                  password lockout cases.
+                </p>
+              </div>
+            </div>
+
             <div id="rla" class="tabcontentSide" style="display: none;">
               <div class="appProjHeader">
                 <h2>Revit Library Addin</h2>
