Addded new revit library video

--- a/projects.html
+++ b/projects.html
@@ -681,7 +681,7 @@
               <div class="appSlideshowContainer">
                 <iframe
                   width="40%"
-                  src="https://www.youtube.com/embed/WEwvZd9MpHE"
+                  src="https://www.youtube.com/embed/Bl_KFkfzweg"
                   frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen
@@ -712,6 +712,9 @@
                         </li>
                         <li>
                           Multiple display options
+                        </li>
+                        <li>
+                          Ability to search and add tags
                         </li>
                       </ul>
                     </li>
