--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
 
         <div class="project-container">
           <div class="project-description">
-            <h2 style="margin-top: 0;">Holli Dolli</h2>
+            <h2 style="margin-top: 0;">Green Start</h2>
             <strong>[HTML/CSS/JS] [UI/UX] [Bootstrap] [Git Deployment] [Web hosting management]</strong>
 
             <p>
